--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-png = "0.17.10"
+image = "0.24.7"
 parry3d = "0.13.5"
 anyhow = "1.0.75"
 rayon = "1.8.0"
 rand = "0.8.5"
+clap = { version= "4.4.7", features= ["derive"]}
