--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ clap = { version= "4.4.7", features= ["derive"]}
 serde = { version = "1.0.171", features = ["derive"] }
 serde_json = "1.0.100"
 encoding_rs = "0.8.33"
+ocl = "0.19.6"
